--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+
+<script type="text/javascript" src="style.js"></script>
+	<title></title>
+</head>
+<body>
+hello
+</body>
+</html>
