--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <script type="text/javascript" src="style.js"></script>
+	
 	<title></title>
 </head>
 <body>
-hello
+	<h1>Hello World!</h1>
 </body>
 </html>
