--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	
 	<title></title>
 </head>
-<body>
-	<h1>Hello World!</h1>
-	<i> Welcome</i>
+<body><div class="spinner-grow" role="status">
+  <span class="sr-only">hello</span>
+</div>
 </body>
 </html>
