--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title></title>
 </head>
 <body><div class="spinner-grow" role="status">
-  <span class="sr-only">hello</span>
+  <span class="sr-only">hello world!</span>
 </div>
 </body>
 </html>
