--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 	
 	<title></title>
 </head>
-<body><div class="spinner-grow" role="status">
-  <span class="sr-only">hello world!</span>
+<body>
+	<div class="card">
+  <div class="card-body">
+   Hello World!
+  </div>
 </div>
 </body>
 </html>
