--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="card">
   <div class="card-body">
-   Hello World!
+	  <h1><center>Hello World!</h1></center>
   </div>
 </div>
 </body>
