--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
   <div class="card-body">
 	  <h1><center>Hello World!</h1></center>
 </div>
+		<ul class="List of extra classses available">
+ 
+  <li class="list-group-item">Physical Science</li>
+  <li class="list-group-item">Business Studies</li>
+  <li class="list-group-item">Maths Lits</li>
+  <li class="list-group-item">Life Science</li>
+</ul>
 </body>
 </html>
