--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <li class="list-group-item">Maths Lits</li>
   <li class="list-group-item">Life Science</li>
 </ul>
-		Signup below
+		<br><br><br>
+		<h2>Signup below</h2>
 		
 		
 		
