--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="card">
   <div class="card-body">
-	  <h1><center>List of extra classses available</h1></center>
+	  <h1><center>List of our online extra classses available</h1></center>
 </div>
 		<ul class="List of extra classses available">
  
